Maps API + Some temp styling for Rodd

--- a/sites/all/themes/alhx/css/flexslider.css
+++ b/sites/all/themes/alhx/css/flexslider.css
@@ -9,6 +9,9 @@
  * Contributing author: Tyler Smith (@mbmufffin)
  */
 
+.flex-body {
+	height: 400px;
+	}
  
 /* Browser Resets */
 .flex-container a:active,
