--- a/sites/all/themes/alhx/css/pages.css
+++ b/sites/all/themes/alhx/css/pages.css
@@ -54,7 +54,7 @@ h1, h2, h3 {
 .splashSub {
 /*  z-index: -999;*/
   position: relative;
-  height: 40% !important;
+  height: 50% !important;
   overflow: hidden;
 /*  display: block;*/
 }
@@ -389,6 +389,28 @@ h1.logo a:hover, h1.logo a:active {
 
 /* @group Product Filters */
 
+.productTypeItems {
+	width: 100%;
+	overflow: hidden;
+	margin: 15px 0 0 0;
+	padding: 0 0 15px 0;
+	border-bottom: 1px solid #e4e4e4;
+	}
+.productTypeItems img {
+	width: 20%;
+	height: auto;
+	float: left;
+	}
+.productTypeItems h2 {
+	margin: 0;
+	}
+.productTypeCaption {
+	height: 100%;
+	padding: 5px;
+	width: 75%;
+	margin: 0 0 0 22%;
+	}
+
 .productFilterBar {
   font: normal .8em/1.5em "Monaco", "lucida console", "courier", monospace;
 /*  letter-spacing: .3em;*/
@@ -429,14 +451,22 @@ h1.logo a:hover, h1.logo a:active {
 
 .view-content .productItem {
   overflow: auto;
-  border-bottom: 1px solid #333;
+  border-bottom: 1px solid #e4e4e4;
   padding-bottom: .5em;
   margin-bottom: .5em;
 }
 
-.view-content .productItem img {
-  margin-right: .5em;
+.view-content .productItem .resultsImageWrap {
+  margin-right: .75em;
+  overflow: hidden;
+  width: 65px;
+  height: 65px;
   float: left;
+}
+
+.view-content .productItem img {
+  width: 100%;
+  height: auto;
 }
 
 /* @end */
@@ -510,6 +540,25 @@ h1.logo a:hover, h1.logo a:active {
   margin: .5em 5%;
 }
 
+/* @end */
+
+/* @group Product Page Styles */
+.field-type-image {
+	width: 60%;
+	float: left;
+	overflow: hidden;
+	}
+.field-type-image img {
+	
+	}
+.field-name-field-products {
+	width: 30%;
+	margin-left: 65%;
+	}
+.field-group-htabs-wrapper {
+	clear: both;
+	width: 100%;
+	}
 /* @end */
 
 #name-and-slogan { /* Wrapper for website name and slogan */
