--- a/sites/all/themes/alhx/css/flexslider.css
+++ b/sites/all/themes/alhx/css/flexslider.css
@@ -57,10 +57,18 @@ html[xmlns] .slides {display: block;}
 .flexslider .caption {
   text-align: center;
   position: absolute;
-  top: 50%;
+  top: 35%;
   width: 100%;
   color: #fff !important;
 }
+.flexslider .caption h1 {
+  margin-bottom: .4em;
+  font-size: 2.2em;
+	}
+.flexslider .caption h1 a {
+  color: #fff;
+  text-decoration: none;
+	}
 
 .flexslider ul#flexslider_views_slideshow_flexslider_galleries-block {
   height: 100% !important;
