--- a/sites/all/themes/alhx/css/normalize.css
+++ b/sites/all/themes/alhx/css/normalize.css
@@ -368,7 +368,7 @@ mark {
 p,
 pre {
   /* Sets 1 unit of vertical rhythm on the top and bottom margin. */
-  margin: 1.5em 0;
+  margin: 1em 0;
 }
 
 /*
@@ -518,6 +518,7 @@ img {
   /* @todo Add responsive embedded video. */
   max-width: 100%;
   height: auto;
+  width: 100%;
 }
 
 /*
