Fixed map colours

--- a/sites/all/themes/alhx/css/pages.css
+++ b/sites/all/themes/alhx/css/pages.css
@@ -33,6 +33,10 @@ h1, h2, h3 {
   font-family: 'Archivo Narrow';
 }
 
+.splashSection {
+  overflow: auto;
+}
+
 .splash {
 /*  z-index: -999;*/
   position: relative;
