--- a/sites/all/themes/alhx/css/pages.css
+++ b/sites/all/themes/alhx/css/pages.css
@@ -528,7 +528,31 @@ h1.logo a:hover, h1.logo a:active {
 
 /* @group Filtered Product List */
 
-.view-content > h3 {
+/*.sticky-ul {
+    height: 100%;
+    overflow: auto;
+}*/
+.headerFixed h3.stickyHeaders {
+  margin: 1em 0 0 0 !important;
+}
+
+.headerFixed + .productItem {
+  padding-top: 6em !important;
+}
+
+.headerFixed {
+  position: fixed;
+  top: 0;
+  background-color: #fff;
+  width: 50%;
+}
+
+.view-content {
+/*  padding-top: 1em;*/
+  position: relative;
+}
+
+.view-content > h3, .stickyHeaders {
     font: bold 1.6em/1.5em 'Archivo Narrow', Impact, Helvetica, Arial, sans-serif !important;
     border-top: 3px solid #285993;
     border-bottom: 3px solid #993333;
