--- a/sites/all/themes/alhx/css/pages.css
+++ b/sites/all/themes/alhx/css/pages.css
@@ -531,7 +531,16 @@ h1.logo a:hover, h1.logo a:active {
 }
 
 .views-exposed-form .views-exposed-widget .form-submit {
+  font: normal 1em/1.5em "Monaco", "lucida console", "courier", monospace;
   margin: 0em !important;
+  background-color: transparent;
+  border: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.views-submit-button {
+  background-color: #e1edf4 !important;
 }
 
 /* @end */
