--- a/sites/all/themes/alhx/css/pages.css
+++ b/sites/all/themes/alhx/css/pages.css
@@ -899,7 +899,7 @@ div.innerPageNav div.innerNavItem {
 
 .contentBand h4 {
 	font: normal 1.25em/1.5em 'Archivo Narrow', Impact, Helvetica, Arial, sans-serif;
-	color: #285993;
+	color: #933;
 }
 
 .contentBand ul.inlineGrid {
@@ -926,10 +926,13 @@ ol.inlineGrid {
 ol.inlineGrid li {
   width: 30%;
   height: 9em;
-  line-height: 1.2em;
+  line-height: 1.4em;
   text-align: center;
   padding: 30px 1.5% 30px 1.5%;
   float: left;
+  font-family: Monaco;
+  font-size: 0.8em;
+  color: #933;
 }
 
 ol.inlineGrid li:before {
@@ -939,8 +942,8 @@ ol.inlineGrid li:before {
   margin: 0 auto .25em auto;
   text-align: center;
 	font-weight: bold;
-	color: #fff;
-	background-color: #933;
+	color: #933;
+	border: 2px solid #933;
   width: 1em;
   padding: .25em;
   border-radius: 50%;
@@ -948,6 +951,14 @@ ol.inlineGrid li:before {
 }
 
 .contentBand ul.inlineGrid li span.gridIcon {
+}
+
+.contentBand span.lineBreak {
+	width: 50%;
+	height: 1px;
+	display: block;
+	background-color: #DADADA;
+	margin: 4em auto 2em auto;
 }
 
 /* @group Blockquotes */
@@ -966,7 +977,7 @@ ol.inlineGrid li:before {
 
 /* @group In-page Carousel Styles */
 
-.contentBand .flex-caption {margin: 1.5em auto 0 auto; width: 75%; padding: 1em 0 1em 0; border-bottom: 1px solid #dbdbdb; text-align: center;}
+.contentBand .flex-caption {margin: 1.5em auto 1em auto; width: 75%; padding: 1em 0 1em 0; border-bottom: 1px solid #DADADA; text-align: center;}
 .contentBand .flex-control-nav {  }
 .contentBand .flex-control-paging li a { background: #777; background: rgba(0,0,0,0.5);}
 .contentBand .flex-control-paging li a:hover { background: #333; background: rgba(0,0,0,0.7); }
